# google-tlog-witness

./: BUILD.bazel  MODULE.bazel  README.md  go.mod
.github/workflows/: ci.yaml  lint.yaml
build_defs/: BUILD.bazel  log_list_files_test.go  tlog.bzl  tlog_policy_files_test.go
internal/flagutil/: BUILD.bazel  flagutil.go
internal/vkey/: BUILD.bazel  vkey.go
logs/paic/: BUILD.bazel  log-list-dev.txt  log-list.txt
policies/paic/: BUILD.bazel
tools/: BUILD.bazel  gen_log_list.go  gen_tlog_policy.go
witnesses/: BUILD.bazel  transparency-dev.txt  witness_files_test.go
