# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")
load("//build_defs:tlog.bzl", "concatenated_log_list", "log_list_test")

gazelle(name = "gazelle")

concatenated_log_list(
    name = "log-list-10qps-10klogs",
    srcs = [
        "//logs/paic:log-list.txt",
        # Add additional product log lists here as they are onboarded.
    ],
    visibility = ["//visibility:public"],
)

log_list_test(
    name = "log_list_files_test",
    srcs = [":log-list-10qps-10klogs.txt"],
)
