load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "gen_log_list",
    srcs = ["gen_log_list.go"],
    deps = ["//internal/flagutil"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gen_tlog_policy",
    srcs = ["gen_tlog_policy.go"],
    deps = ["//internal/flagutil"],
    visibility = ["//visibility:public"],
)
